# Date-A-Scientist

./: .gitignore  README.md  date-a-scientist.ipynb  pyproject.toml
notebooks/: date-a-scientist.ipynb
src/date_a_scientist/: support.py
